 + Remove visual clutter in cut scenes
 + Add setting to set default/initial zoom
 * Fix speech bubbles overlapping in the wrong order
 * Fix wrong ice beam angle if it goes diagonally up out of map through world wrap
 * Fix double water splash when flying saucer drowns
 * Fix odd floating pixels when wielding and rotating cleaver
 * Fix birdy being drawn behind hedgehogs and objects

Game HUD:
 + Colorize switching arrows, pointing arrow and target cross in clan color
 + Skip ammo menu animation when playing with turn time of 10s or less
 + Don't show crate spawn message for initial crates in missions
 + Don't show hedgehog health if “invulnerable” game modifier is active
 + Display player name of own teams in online games
 * Black clan color can now be used without visual problems
 * Fix last 2 characters in demo chat being missing
 * Hide most HUD elements in cinematic mode
 * Don't show "F1", "F2", etc. in ammo menu if these aren't the actual slot keys
 * Fix wind bar animation not looping properly
 * Fix airplane line being drawn above many HUD elements
 * Suppress “<team> is gone.” message at end of game
 * Fix game engine ignoring appropriate number formatting of user language
 * Fix buggy behaviour when entering speech bubble command in hog placement phase

Translations:
 + Major update: Chinese
 + Credits page is now translatable
 * Remove Arabic translation from release

Frontend:
 + Quick games are more random: More map types, random team size and difficulty
 + Add button in main menu at top left corner to open credits page
 + Restructure credits page
 + More intelligent automatic mission selection in campaign screen
 + New data directory for video thumbnails: Data/VideoThumbnails
 + Display a warning when the same key is used multiple times
 + Stats screen now hides empty sections
 * Fix broken handling of /watch chat command on official server
 * Fix renaming a video leading to loss of thumbnail after restart